--- a/manifest.json
+++ b/manifest.json
@@ -34,5 +34,13 @@
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
+    },
+    "browser_specific_settings": {
+      "gecko": {
+        "id": "designqa@example.com"
+      },
+      "edge": {
+        "browser_action_next_to_address_bar": true
+      }
     }
   }
